--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -141,3 +141,6 @@ body,
     width: 100%;
     height: 100%;
 }
+a, h1, h2, h3, h4 {
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+}
