--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -26,12 +26,37 @@
     align-items: center;
 } */
 
-img {
-    height: 100px;
-    width: 100px;
+.logo-img {
+    height: 50%;
+    width: 25%;
 }
 
 .sign-up-link {
     padding: 5px 15px;
     border: 2px solid white;
+}
+.splash-logo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.splash-logo {
+    width: 150px;
+    height: 85px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.title {
+    font-size: 48px;
+    font-weight: 600;
+    
+}
+
+.splash-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
