--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -94,3 +94,13 @@
     margin-right: 10px;
 }
 
+.sign-up-middle button {
+    padding: 10px 120px;
+    background-color: #d32323; 
+    color: #fff;
+    font-weight: 400;
+    font-size: 18px;
+    border-radius: 5px;
+    outline: none;
+    border: none
+}
